# project_apply

./: README.md
backend/: main.py  pyproject.toml
backend/config/: database.py
backend/entities/: student.py  transcripts.py
backend/models/: student.py  transcripts.py
backend/schemas/: student.py  transcripts.py
backend/sql/: create_table.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: main.ts
frontend/src/components/Content/: contact.vue  content.vue  homes.vue  info.vue  project.vue
frontend/src/components/HeaderBar/: index.vue
frontend/src/links/: index.js  link1.js
frontend/src/pages/home/: index.vue
frontend/src/router/: index.ts
