[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tiendat28 <datc3.cc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
peewee = "^3.16.2"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
